--- a/styles/recolor.css
+++ b/styles/recolor.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Road Rage";
+    src: url("./fonts/Road_Rage.otf");
+}
+
+@font-face {
+    font-family: "Indelible";
+    src: url("./fonts/Indelble.otf");
+}
+
 /*--------------------------------*/
 /* color variables */
 /*--------------------------------*/
@@ -12,8 +22,8 @@
     --dark-alt-color: rgb(55, 39, 100);
     /*alternate tertiary color */
     --glow-color: rgb(210, 0, 116);
-    --sidebar-color: rgba(210, 0, 116, 0.3)
-        /*glow color  formerly orange*/
+    --sidebar-color: rgba(210, 0, 116, 0.3);
+    --pause-glow: rgb(5, 194, 219);
 }
 
 /*--------------------------------*/
@@ -373,4 +383,100 @@ li.folder.droptarget>header h3 i {
 #sidebar {
     background-color: var(--sidebar-color);
     /* background-image: url() !important; */
+}
+
+#pause.paused img {
+    top: -25px;
+    -webkit-animation: rotation 25s infinite linear;
+}
+
+
+@keyframes glowing {
+    0% {
+        background-color: #2ba805;
+        box-shadow: 0 0 3px #2ba805;
+    }
+
+    50% {
+        background-color: #49e819;
+        box-shadow: 0 0 30px #49e819;
+    }
+
+    100% {
+        background-color: #2ba805;
+        box-shadow: 0 0 3px #2ba805;
+    }
+}
+
+@keyframes flicker {
+
+    0%,
+    18%,
+    22%,
+    25%,
+    53%,
+    57%,
+    100% {
+        /* text-shadow:
+            0 0 4px #fff,
+            0 0 11px #fff,
+            0 0 19px #fff,
+            0 0 40px #0fa,
+            0 0 80px #0fa,
+            0 0 90px #0fa,
+            0 0 100px #0fa,
+            0 0 150px #0fa; */
+        text-shadow:
+            0 0 4px #fff,
+            0 0 11px #fff,
+            0 0 13px #fff,
+            0 0 16px var(--pause-glow),
+            0 0 18px var(--pause-glow),
+            0 0 20px var(--pause-glow),
+            0 0 35px var(--pause-glow),
+            0 0 40px var(--pause-glow);
+    }
+
+    20%,
+    24%,
+    55% {
+        text-shadow: none;
+    }
+}
+
+@keyframes pulsate {
+    100% {
+        /* Larger blur radius */
+        text-shadow:
+            0 0 4px #fff,
+            0 0 11px #fff,
+            0 0 19px #fff,
+            0 0 40px var(--pause-glow),
+            0 0 80px var(--pause-glow),
+            0 0 90px var(--pause-glow),
+            0 0 100px var(--pause-glow),
+            0 0 150px var(--pause-glow);
+    }
+
+    0% {
+        /* Smaller blur radius */
+        text-shadow:
+            0 0 2px #fff,
+            0 0 4px #fff,
+            0 0 6px #fff,
+            0 0 10px var(--pause-glow),
+            0 0 45px var(--pause-glow),
+            0 0 55px var(--pause-glow),
+            0 0 70px var(--pause-glow),
+            0 0 80px var(--pause-glow);
+    }
+}
+
+#pause.paused h3 {
+    font: 4em Indelible;
+    color: var(--main-color);
+    animation: pulsate 2.5s infinite alternate;
+
+
+
 }
